Update all layout files and includes with up-to-date markup best practice

--- a/icons.html
+++ b/icons.html
@@ -7,8 +7,8 @@ permalink: icons/
 
 <p>Full font included here and CSS via MaxCDN. <a href="http://fortawesome.github.io/Font-Awesome/icons/">Visit this page on FontAwesome&rsquo;s website</a> to grab the right CSS class or search for a particular icon. </p>
 
-<p>Fonts that I have used:</p>
+<p>Fonts that this theme uses:</p>
 
-<h2>
+<!--<h2>
 	<span class="fa fa-bars"><span>&equiv;</span></span><br>
-</h2>
+</h2>-->
