Move the Refills from one folder to another

--- a/refills.html
+++ b/refills.html
@@ -20,7 +20,7 @@ We use Refills to quickly prototype patterns. Additional patterns may be added a
   Below we loop over all files to build an example page
 {% endcomment %}
 
-{% directory path: _sass_patterns/refills_html %}
+{% directory path: _sass/refills_html %}
   
   {% include_relative {{ file.url }} %}
   
