--- a/refills.html
+++ b/refills.html
@@ -3,11 +3,10 @@ layout: page
 nav-title: Refills
 title: Sample Refill Components
 permalink: refills/
+body-class: 'patternlib full-width'
 ---
 
-# Refills from Thoughbot
-
-We use Refills to quickly prototype patterns. Additional patterns may be added as well. Simply include the SASS file located in `_sass_patterns` and then include the relevant Refills file where you want it: `{# include '_sass_patterns/refills_html/name-of-file.html' #}`. 
+<p>We use Refills to quickly prototype patterns. Additional patterns may be added as well. Simply include the SASS file located in <code>_sass/refills</code> and then include the relevant Refills file where you want it: <code>{% raw %}{% include '_sass/refills_html/name-of-file.html' %}{% endraw %}</code>.</p>
 
 {% comment %}
 	The *directory* plugin scans a directory and gives us access to the following variables:
@@ -22,9 +21,16 @@ We use Refills to quickly prototype patterns. Additional patterns may be added a
 
 {% directory path: _sass/refills_html %}
   
-  {% include_relative {{ file.url }} %}
-  
-  <textarea>
+<div class="patternlib--sample">
+  <h3 class="patternlib--sample--title">{{ file.name }}</h3>
+  <div class="patternlib--sample--pattern">
 {% include_relative {{ file.url }} %}
-  </textarea>
+  </div>
+  <div class="patternlib--sample--code">
+    <textarea>
+{% include_relative {{ file.url }} %}
+    </textarea>
+  </div>
+</div>
+
 {% enddirectory %}
