More structure and styling

--- a/front-page.html
+++ b/front-page.html
@@ -25,12 +25,79 @@ permalink: home/
   <div class="banner__svg__follow"></div>
 </section>
 
-<section id="recent-work" class="recentwork">
+<section id="recent-work" class="recent-work">
   <div class="section__label section__label--vert">Case Studies</div>
-  <h2 class="section__title recentwork__title">Made <em>Recently</em></h2>
-  <h3 class="recentwork__client">Leica Geosystems</h3>
-  <p class="recentwork__copy">
-    A fresh look at Leica's e-commerce experience results in a new way of showcasing products, leading customers to content, and winning the conversation.
-  </p>
-  <a href="#" class="recentwork__link">View More</a>
+  <div class="recent-work container">
+    <h2 class="section__title recent-work__title">Made<br /><em>Recently</em></h2>
+    <h3 class="recent-work__client">Leica Geosystems</h3>
+    <p class="recent-work__copy">
+      A fresh look at Leica's e-commerce experience results in a new way of showcasing products, leading customers to content, and winning the conversation.
+    </p>
+    <a href="#" class="recent-work__link">View More</a>
+		<img src="../assets/img/screens-leica1.png">
+		<img src="../assets/img/web-layout-leica.png">
+  </div>
+	<div class="recent-work container">
+		<h3 class="recent-work__client">United Way of Rhode Island</h3>
+		<p class="recent-work__copy">
+			Learn how United Way of Rhode Island transformed the digital experience using user-focused design that's inspiring volunteers.
+		</p>
+		<a href="#" class="recent-work__link">View More</a>
+		<img src="../assets/img/screens-leica1.png">
+	</div>
+</section>
+
+<section id="expertise" class="expertise">
+	<div class="container">
+		<h2 class="section__title expertise__title">Made to <em>Order</em></h2>
+		<div class="expertise__row">
+			<div class="expertise__column">
+				<p class="expertise__categories">Strategy</p>
+				<p class="expertise__areas">Research &amp; Analysis</p>
+				<p class="expertise__areas">SEO</p>
+				<p class="expertise__areas">Content Strategy</p>
+				<p class="expertise__areas">Analytics &amp; Tracking</p>
+			</div>
+			<div class="expertise__column">
+				<p class="expertise__categories">Design</p>
+				<p class="expertise__areas">Information Architecture</p>
+				<p class="expertise__areas">Responsive Design</p>
+				<p class="expertise__areas">Wireframes &amp; Prototypes</p>
+				<p class="expertise__areas">Usability Testing</p>
+			</div>
+		</div>
+		<div class="expertise__row">
+			<div class="expertise__column">
+				<p class="expertise__categories">Development</p>
+				<p class="expertise__areas">Drupal</p>
+				<p class="expertise__areas">WordPress</p>
+				<p class="expertise__areas">eCommerce</p>
+				<p class="expertise__areas">Custom Software</p>
+			</div>
+			<div class="expertise__column">
+				<p class="expertise__categories">Ongoing Support</p>
+				<p class="expertise__areas">Security Audits</p>
+				<p class="expertise__areas">Performance &amp; Scalability</p>
+				<p class="expertise__areas">API Integrations</p>
+				<p class="expertise__areas">Content Migration</p>
+			</div>
+		</div>
+	</div>
+	<div class="expertise__examples">
+		<div class="container">
+			<p class="expertise__categories">Typical Projects</p>
+			<div class="expertise__row">
+				<div class="expertise__column">
+					<p class="expertise__areas">Plugin or Module Development</p>
+					<p class="expertise__areas">CMS &amp; Technology Replatforms</p>
+					<p class="expertise__areas">Maintenance &amp; Optimization</p>
+				</div>
+				<div class="expertise__column">
+					<p class="expertise__areas">Project &amp; Program Management</p>
+					<p class="expertise__areas">Website Redesigns</p>
+					<p class="expertise__areas">Native App Consulting</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
