Begin styling footer

--- a/front-page.html
+++ b/front-page.html
@@ -162,3 +162,39 @@ permalink: home/
 		<a href="#" class="take-action__link">Tell Us About Your Project</a>
 	</div>
 </section>
+
+<footer id="footer" class="v3footer">
+	<div class="v3footer__nav container">
+		<div class="v3footer__nav__row">
+			<div class="v3footer__nav__column">
+				<p class="v3footer__nav__categories">Social</p>
+				<a href="" class="v3footer__nav__links">Twitter</a>
+				<a href="" class="v3footer__nav__links">LinkedIn</a>
+				<a href="" class="v3footer__nav__links">Facebook</a>
+				<a href="" class="v3footer__nav__links">GitHub</a>
+				<a href="" class="v3footer__nav__links">Instagram</a>
+				<a href="" class="v3footer__nav__links">Google+</a>
+				<p class="v3footer__nav__categories">Services</p>
+				<a href="" class="v3footer__nav__links">Strategy &amp; Support</a>
+				<a href="" class="v3footer__nav__links">Design &amp; UX</a>
+				<a href="" class="v3footer__nav__links">Development</a>
+			</div>
+			<div class="v3footer__nav__column">
+				<p class="v3footer__nav__categories">Work</p>
+				<a href="" class="v3footer__nav__links">Case Studies</a>
+				<a href="" class="v3footer__nav__links">Nonprofit</a>
+				<a href="" class="v3footer__nav__links">Healthcare</a>
+				<p class="v3footer__nav__categories">Explore</p>
+				<a href="" class="v3footer__nav__links">Company</a>
+				<a href="" class="v3footer__nav__links">Blog</a>
+				<a href="" class="v3footer__nav__links">Contact Us</a>
+			</div>
+		</div>
+	</div>
+	<div class="v3footer__newsletter container">
+
+	</div>
+	<div class="v3footer__identification container">
+
+	</div>
+</footer>
