Adjustments after review of structure/setup with J

--- a/front-page.html
+++ b/front-page.html
@@ -12,39 +12,41 @@ permalink: home/
 </section>
 
 <section class="banner" role="banner">
-  <img src="../assets/img/sample-video-still.jpg" alt="Unsplash">
-  <div class="banner__header container">
-    <h1 class="section__title banner__title">We Make It <em>Integrated.</em></h1>
-    <p class="banner__subtitle">Oomph is a full-service digital agency</p>
-  </div>
-  <div class="banner__svg">
-    <div class="banner__svg__inner">
-      <p class="banner__svg__inner__copy">Oomph is a group of strategists, designers and engineers who create lasting impressions, develop responsive experiences and foster enduring relationships.</p>
-      <a href="#" class="button">Learn More</a>
-    </div>
-  </div>
-  <div class="banner__svg__follow"></div>
+	<img src="../assets/img/sample-video-still.jpg" alt="Unsplash">
+	<div class="banner__header container">
+		<h1 class="section__title banner__title">We Make It <em>Integrated.</em></h1>
+		<p class="banner__subtitle">Oomph is a full-service digital agency</p>
+	</div>
+	<div class="banner__svg">
+		<div class="banner__svg__inner">
+			<p class="banner__svg__inner__copy">
+				Oomph is a group of strategists, designers and engineers who create lasting impressions, develop responsive experiences and foster enduring relationships.
+			</p>
+			<a href="#" class="button button__primary--white">Learn More</a>
+		</div>
+	</div>
+	<div class="banner__svg__follow"></div>
 </section><!-- .banner -->
 
 <section id="recent-work" class="recent-work">
-  <div class="section__label recent-work__label">Case Studies</div>
-  <div class="recent-work__showcase container">
-    <h2 class="section__title recent-work__title">Made<br /><em>Recently</em></h2>
-    <h3 class="recent-work__client">Leica Geosystems</h3>
-    <p class="recent-work__copy">
-      A fresh look at Leica's e-commerce experience results in a new way of showcasing products, leading customers to content, and winning the conversation.
-    </p>
-    <a href="#" class="recent-work__link">View More</a>
+	<div class="section__label recent-work__label">Case Studies</div>
+	<div class="recent-work__showcase container">
+		<h2 class="section__title recent-work__title">Made<br /><em>Recently</em></h2>
+		<h3 class="recent-work__client">Leica Geosystems</h3>
+		<p class="recent-work__copy">
+			A fresh look at Leica's e-commerce experience results in a new way of showcasing products, leading customers to content, and winning the conversation.
+		</p>
+		<a href="#" class="button button__arrow-right">View More</a>
 		<img src="../assets/img/screens-leica1.png">
 		<img src="../assets/img/web-layout-leica.png">
-  </div>
+	</div>
 	<div class="recent-work__arrow-separator"></div>
 	<div class="recent-work__showcase container">
 		<h3 class="recent-work__client">United Way of Rhode Island</h3>
 		<p class="recent-work__copy">
 			Learn how United Way of Rhode Island transformed the digital experience using user-focused design that's inspiring volunteers.
 		</p>
-		<a href="#" class="recent-work__link">View More</a>
+		<a href="#" class="button button__arrow-right">View More</a>
 		<img src="../assets/img/screens-leica1.png">
 	</div>
 </section><!-- .recent-work -->
@@ -53,52 +55,52 @@ permalink: home/
 	<div class="expertise__top container">
 		<h2 class="section__title expertise__title">Made to <em>Order</em></h2>
 		<div class="expertise__row">
-			<div class="expertise__column">
-				<p class="expertise__categories">Strategy</p>
-				<p class="expertise__areas">Research &amp; Analysis</p>
-				<p class="expertise__areas">SEO</p>
-				<p class="expertise__areas">Content Strategy</p>
-				<p class="expertise__areas">Analytics &amp; Tracking</p>
-			</div>
-			<div class="expertise__column">
-				<p class="expertise__categories">Design</p>
-				<p class="expertise__areas">Information Architecture</p>
-				<p class="expertise__areas">Responsive Design</p>
-				<p class="expertise__areas">Wireframes &amp; Prototypes</p>
-				<p class="expertise__areas">Usability Testing</p>
-			</div>
+			<ul class="expertise__column">
+				<li class="expertise__categories">Strategy</li>
+				<li class="expertise__areas">Research &amp; Analysis</li>
+				<li class="expertise__areas">SEO</li>
+				<li class="expertise__areas">Content Strategy</li>
+				<li class="expertise__areas">Analytics &amp; Tracking</li>
+			</ul>
+			<ul class="expertise__column">
+				<li class="expertise__categories">Design</li>
+				<li class="expertise__areas">Information Architecture</li>
+				<li class="expertise__areas">Responsive Design</li>
+				<li class="expertise__areas">Wireframes &amp; Prototypes</li>
+				<li class="expertise__areas">Usability Testing</li>
+			</ul>
 		</div>
 		<div class="expertise__row">
-			<div class="expertise__column">
-				<p class="expertise__categories">Development</p>
-				<p class="expertise__areas">Drupal</p>
-				<p class="expertise__areas">WordPress</p>
-				<p class="expertise__areas">eCommerce</p>
-				<p class="expertise__areas">Custom Software</p>
-			</div>
-			<div class="expertise__column">
-				<p class="expertise__categories">Ongoing Support</p>
-				<p class="expertise__areas">Security Audits</p>
-				<p class="expertise__areas">Performance &amp; Scalability</p>
-				<p class="expertise__areas">API Integrations</p>
-				<p class="expertise__areas">Content Migration</p>
-			</div>
+			<ul class="expertise__column">
+				<li class="expertise__categories">Development</li>
+				<li class="expertise__areas">Drupal</li>
+				<li class="expertise__areas">WordPress</li>
+				<li class="expertise__areas">eCommerce</li>
+				<li class="expertise__areas">Custom Software</li>
+			</ul>
+			<ul class="expertise__column">
+				<li class="expertise__categories">Ongoing Support</li>
+				<li class="expertise__areas">Security Audits</li>
+				<li class="expertise__areas">Performance &amp; Scalability</li>
+				<li class="expertise__areas">API Integrations</li>
+				<li class="expertise__areas">Content Migration</li>
+			</ul>
 		</div>
 	</div>
 	<div class="expertise__examples">
 		<div class="expertise__bottom container">
 			<p class="expertise__categories">Typical Projects</p>
 			<div class="expertise__row">
-				<div class="expertise__column">
-					<p class="expertise__areas">Plugin or Module Development</p>
-					<p class="expertise__areas">CMS &amp; Technology Replatforms</p>
-					<p class="expertise__areas">Maintenance &amp; Optimization</p>
-				</div>
-				<div class="expertise__column">
-					<p class="expertise__areas">Project &amp; Program Management</p>
-					<p class="expertise__areas">Website Redesigns</p>
-					<p class="expertise__areas">Native App Consulting</p>
-				</div>
+				<ul class="expertise__column">
+					<li class="expertise__areas">Plugin or Module Development</li>
+					<li class="expertise__areas">CMS &amp; Technology Replatforms</li>
+					<li class="expertise__areas">Maintenance &amp; Optimization</li>
+				</ul>
+				<ul class="expertise__column">
+					<li class="expertise__areas">Project &amp; Program Management</li>
+					<li class="expertise__areas">Website Redesigns</li>
+					<li class="expertise__areas">Native App Consulting</li>
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -107,7 +109,7 @@ permalink: home/
 <section id="thinking" class="thinking">
 	<div class="section__label thinking__label">From the Blog</div>
 	<div class="thinking__blog container">
-		<h2 class="section__title thinking__title"><em>Thinking about </em><br />Making</h2>
+		<h2 class="section__title thinking__title"><em>Thinking about</em> Making</h2>
 		<div class="thinking__post">
 			<!-- This block's styles come from _notes.scss, which is copied from main repo -->
 			<div class="blog-post--content">
@@ -149,14 +151,14 @@ permalink: home/
 				</div>
 			</div>
 		</div>
-		<a href="#" class="button">Load More Posts</a>
+		<a href="#" class="button button__primary">Load More Posts</a>
 	</div>
 </section><!-- .thinking -->
 
 <section id="take-action" class="take-action">
 	<div class="take-action__content container">
-		<p class="take-action__lead-in">So What's Next?</p>
-		<h2 class="section__title take-action__title">Let's <em>Make it Great</em></h2>
+		<p class="take-action__lead-in">So What&rsquo;s Next?</p>
+		<h2 class="section__title take-action__title">Let&rsquo;s <em>Make it Great</em></h2>
 		<p class="take-action__copy">
 			Oomph works best when we work together. Tell us a little now and let's start a conversation about your project.
 		</p>
@@ -164,53 +166,56 @@ permalink: home/
 	</div>
 </section>
 
-<footer id="footer" class="v3footer">
-	<div class="v3footer__nav container">
-		<div class="v3footer__nav__row">
-			<div class="v3footer__nav__column">
-				<p class="v3footer__nav__categories">Social</p>
-				<a href="" class="v3footer__nav__links">Twitter</a>
-				<a href="" class="v3footer__nav__links">LinkedIn</a>
-				<a href="" class="v3footer__nav__links">Facebook</a>
-				<a href="" class="v3footer__nav__links">GitHub</a>
-				<a href="" class="v3footer__nav__links">Instagram</a>
-				<a href="" class="v3footer__nav__links">Google+</a>
-				<p class="v3footer__nav__categories">Services</p>
-				<a href="" class="v3footer__nav__links">Strategy &amp; Support</a>
-				<a href="" class="v3footer__nav__links">Design &amp; UX</a>
-				<a href="" class="v3footer__nav__links">Development</a>
-
-				<div class="section__label v3footer__nav__label">Made In <em>Providence</em></div>
-
-			</div>
-			<div class="v3footer__nav__column">
-				<p class="v3footer__nav__categories">Work</p>
-				<a href="" class="v3footer__nav__links">Case Studies</a>
-				<a href="" class="v3footer__nav__links">Nonprofit</a>
-				<a href="" class="v3footer__nav__links">Healthcare</a>
-				<p class="v3footer__nav__categories">Explore</p>
-				<a href="" class="v3footer__nav__links">Company</a>
-				<a href="" class="v3footer__nav__links">Blog</a>
-				<a href="" class="v3footer__nav__links">Contact Us</a>
-
-				<img src="" style="height:450px;" /><!-- building illustration -->
-			</div>
+<footer id="footer" class="footer">
+	<div class="footer__nav container">
+		<nav class="footer__nav__row">
+			<ul class="footer__nav__column">
+				<li class="footer__nav__categories">Social</li>
+				<li class="footer__nav__links"><a href="" target="_blank">Twitter</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">LinkedIn</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Facebook</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">GitHub</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Instagram</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Google+</a></li>
+			</ul>
+			<ul class="footer__nav__column">
+				<li class="footer__nav__categories">Services</li>
+				<li class="footer__nav__links"><a href="" target="_blank">Strategy &amp; Support</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Design &amp; UX</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Development</a></li>
+			</ul>
+			<ul class="footer__nav__column">
+				<li class="footer__nav__categories">Work</li>
+				<li class="footer__nav__links"><a href="" target="_blank">Case Studies</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Nonprofit</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Healthcare</a></li>
+			</ul>
+			<ul class="footer__nav__column">
+				<li class="footer__nav__categories">Explore</li>
+				<li class="footer__nav__links"><a href="" target="_blank">Company</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Blog</a></li>
+				<li class="footer__nav__links"><a href="" target="_blank">Contact Us</a></li>
+			</ul>
+		</nav>
+		<div class="footer__nav__row">
+			<div class="section__label footer__nav__label">Made In <em>Providence</em></div>
+			<img src="http://zento.jp/img/gift/gift_01c.jpg" />
 		</div>
 	</div>
 
-	<div class="v3footer__newsletter container">
-		<h2 class="section__title v3footer__newsletter__title">Insights, News &amp; Case Studies</h2>
-		<p class="v3footer__newsletter__copy">Sign up to receive regular updates.</p>
+	<div class="footer__newsletter container">
+		<h2 class="section__title footer__newsletter__title">Insights, News &amp; Case Studies</h2>
+		<p class="footer__newsletter__copy">Sign up to receive regular updates.</p>
 		<form action="">
-		  <input type="email" name="email" placeholder="Email address">
-		  <input type="submit" value="Subscribe" class="button">
+			<input type="email" name="email" placeholder="Email address">
+			<input type="submit" value="Subscribe">
 		</form>
 	</div>
-	<div class="v3footer__identification container">
+	<div class="footer__identification container">
 		<img src="../assets/img/oomph_wordmark_red.svg">
-		<p class="v3footer__identification__copy">&copy; 2017 Oomph Inc.</p>
-		<p class="v3footer__identification__copy">401-228-7660</p>
-		<p class="v3footer__identification__copy">72 Clifford St., Providence, RI 02903</p>
-		<p class="v3footer__identification__copy"><a href="#">Privacy Policy</a></p>
+		<p class="footer__identification__copy">&copy; 2017 Oomph Inc.</p>
+		<p class="footer__identification__copy"><a href="tel:401-228-7660">401-228-7660</a></p>
+		<p class="footer__identification__copy"><a href="https://www.google.com/maps/place/Oomph,+Inc./@41.8204071,-71.411847,17z/data=!4m13!1m7!3m6!1s0x89e44514dd89ebbb:0xc5b4c163538c82b1!2s72+Clifford+St,+Providence,+RI+02903!3b1!8m2!3d41.8204071!4d-71.4096583!3m4!1s0x89e44598ae736679:0xa5c7b6e89fc36986!8m2!3d41.820439!4d-71.409723">72 Clifford St., Providence, RI 02903</a></p>
+		<p class="footer__identification__copy"><a href="#">Privacy Policy</a></p>
 	</div>
 </footer>
