Fix button in newsletter form

--- a/front-page.html
+++ b/front-page.html
@@ -208,7 +208,7 @@ permalink: home/
 		<p class="footer__newsletter__copy">Sign up to receive regular updates.</p>
 		<form action="">
 			<input type="email" name="email" placeholder="Email address">
-			<input type="submit" value="Subscribe">
+			<button class="button button__primary">Subscribe</button>
 		</form>
 	</div>
 	<div class="footer__identification container">
