Try to nail down footer

--- a/front-page.html
+++ b/front-page.html
@@ -5,11 +5,14 @@ permalink: home/
 ---
 
 <!-- This is here just for prototyping. We would use same nav in place on site now, just styled differently -->
-<section class="site-nav" role="navigation">
-	<div class="site-nav__svg">
+<header class="navigation" role="navigation">
+	<div class="navigation__svg">
 		<img src="../assets/img/oomph_wordmark_white.svg">
 	</div>
-</section>
+	<div class="navigation__barmenu">
+		<a class="menu-toggle"><i class="fa fa-bars"></i></a>
+	</div>
+</header>
 
 <section class="banner" role="banner">
 	<img src="../assets/img/sample-video-still.jpg" alt="Unsplash">
@@ -199,7 +202,9 @@ permalink: home/
 		</nav>
 		<div class="footer__nav__row">
 			<div class="section__label footer__nav__label">Made In <em>Providence</em></div>
-			<img src="http://zento.jp/img/gift/gift_01c.jpg" />
+			<div class="footer__nav__image">
+				<img src="http://zento.jp/img/gift/gift_01c.jpg" />
+			</div>
 		</div>
 	</div>
 
