Restructure expertise for responsive

--- a/front-page.html
+++ b/front-page.html
@@ -55,54 +55,56 @@ permalink: home/
 </section><!-- .recent-work -->
 
 <section id="expertise" class="expertise">
-	<div class="expertise__top container">
-		<h2 class="section__title expertise__title">Made to <em>Order</em></h2>
-		<div class="expertise__row">
-			<ul class="expertise__column">
-				<li class="expertise__categories">Strategy</li>
-				<li class="expertise__areas">Research &amp; Analysis</li>
-				<li class="expertise__areas">SEO</li>
-				<li class="expertise__areas">Content Strategy</li>
-				<li class="expertise__areas">Analytics &amp; Tracking</li>
-			</ul>
-			<ul class="expertise__column">
-				<li class="expertise__categories">Design</li>
-				<li class="expertise__areas">Information Architecture</li>
-				<li class="expertise__areas">Responsive Design</li>
-				<li class="expertise__areas">Wireframes &amp; Prototypes</li>
-				<li class="expertise__areas">Usability Testing</li>
-			</ul>
-		</div>
-		<div class="expertise__row">
-			<ul class="expertise__column">
-				<li class="expertise__categories">Development</li>
-				<li class="expertise__areas">Drupal</li>
-				<li class="expertise__areas">WordPress</li>
-				<li class="expertise__areas">eCommerce</li>
-				<li class="expertise__areas">Custom Software</li>
-			</ul>
-			<ul class="expertise__column">
-				<li class="expertise__categories">Ongoing Support</li>
-				<li class="expertise__areas">Security Audits</li>
-				<li class="expertise__areas">Performance &amp; Scalability</li>
-				<li class="expertise__areas">API Integrations</li>
-				<li class="expertise__areas">Content Migration</li>
-			</ul>
+	<div class="expertise__areas">
+		<div class="expertise__top container">
+			<h2 class="section__title expertise__title">Made to <em>Order</em></h2>
+			<div class="expertise__row">
+				<ul class="expertise__column">
+					<li class="expertise__header">Strategy</li>
+					<li class="expertise__item">Research &amp; Analysis</li>
+					<li class="expertise__item">SEO</li>
+					<li class="expertise__item">Content Strategy</li>
+					<li class="expertise__item">Analytics &amp; Tracking</li>
+				</ul>
+				<ul class="expertise__column">
+					<li class="expertise__header">Design</li>
+					<li class="expertise__item">Information Architecture</li>
+					<li class="expertise__item">Responsive Design</li>
+					<li class="expertise__item">Wireframes &amp; Prototypes</li>
+					<li class="expertise__item">Usability Testing</li>
+				</ul>
+			</div>
+			<div class="expertise__row">
+				<ul class="expertise__column">
+					<li class="expertise__header">Development</li>
+					<li class="expertise__item">Drupal</li>
+					<li class="expertise__item">WordPress</li>
+					<li class="expertise__item">eCommerce</li>
+					<li class="expertise__item">Custom Software</li>
+				</ul>
+				<ul class="expertise__column">
+					<li class="expertise__header">Ongoing Support</li>
+					<li class="expertise__item">Security Audits</li>
+					<li class="expertise__item">Performance &amp; Scalability</li>
+					<li class="expertise__item">API Integrations</li>
+					<li class="expertise__item">Content Migration</li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="expertise__examples">
 		<div class="expertise__bottom container">
-			<p class="expertise__categories">Typical Projects</p>
+			<p class="expertise__header">Typical Projects</p>
 			<div class="expertise__row">
 				<ul class="expertise__column">
-					<li class="expertise__areas">Plugin or Module Development</li>
-					<li class="expertise__areas">CMS &amp; Technology Replatforms</li>
-					<li class="expertise__areas">Maintenance &amp; Optimization</li>
+					<li class="expertise__item">Plugin or Module Development</li>
+					<li class="expertise__item">CMS &amp; Technology Replatforms</li>
+					<li class="expertise__item">Maintenance &amp; Optimization</li>
 				</ul>
 				<ul class="expertise__column">
-					<li class="expertise__areas">Project &amp; Program Management</li>
-					<li class="expertise__areas">Website Redesigns</li>
-					<li class="expertise__areas">Native App Consulting</li>
+					<li class="expertise__item">Project &amp; Program Management</li>
+					<li class="expertise__item">Website Redesigns</li>
+					<li class="expertise__item">Native App Consulting</li>
 				</ul>
 			</div>
 		</div>
